--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,9 @@
     <string name="nutrition_text">This is the nutrition page</string>
     <string name="main_text">This is the main page</string>
     <string name="profile_text">This is the profile page</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="createUserButton">Create Account</string>
+
 
 </resources>
