--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="createUserButton">Create Account</string>
-
-
+    <string name="signup_name">Name</string>
+    <string name="dialogSU_confirm">Sign up</string>
+    <string name="dialogSU_cancel">Cancel</string>
+    <string name="dialogSU_confirmPass">Confirm Password</string>
 </resources>
