--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="dialogSU_confirm">Sign up</string>
     <string name="dialogSU_cancel">Cancel</string>
     <string name="dialogSU_confirmPass">Confirm Password</string>
+    <string name="BodyStats">Body</string>
+    <string name="Goals">Goals</string>
+    <string name="Timer">Timer</string>
 </resources>
