Added help toolbar, async tasks, progress bar, sharedpreferences for username

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="Goals">Goals</string>
     <string name="Timer">Timer</string>
     <string name="Weight">Weight</string>
+    <string name="bgColour">#FC7A6E</string>
 </resources>
