--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,11 @@
     <string name="dialogSU_confirmPass">Confirm Password</string>
     <string name="BodyStats">Body</string>
     <string name="Goals">Goals</string>
-    <string name="Timer">Timer</string>
-    <string name="Weight">Weight</string>
+    <string name="Timer">Stopwatch</string>
+    <string name="Weight">Weight (lbs)</string>
+    <string name="Height">Height (in)</string>
+    <string name="BMI">BMI</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
