--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,12 @@
 <resources>
     <string name="app_name">2THICCC</string>
-    <string name="login_button">Login</string>
-    <string name="settings_button">Settings</string>
-    <string name="fitness_button">Fitness</string>
-    <string name="nutrition_button">Nutrition</string>
-    <string name="profile_button">Profile</string>
-    <string name="login_text">This is the login page</string>
-    <string name="settings_text">This is the settings page</string>
-    <string name="fitness_text">This is the fitness page</string>
-    <string name="nutrition_text">This is the nutrition page</string>
-    <string name="main_text">This is the main page</string>
-    <string name="profile_text">This is the profile page</string>
-
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
