--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="mainInfoTitle">Main Page Info</string>
     <string name="mainInfoText">\n\nUses a recycler view to cycle through available activities.\n\nClick the views to go to the activity of your choice.\n\nClick the icon in the bottom right corner of the view to see information about the activity and author.\n\nAdd and remove items from the Recycler using the buttons in the view at the bottom of the Recycler View.\n\n\n\nVersion: 2.1\nAuthor: Luka Sitas</string>
     <string name="addItemTitle">Add Item</string>
+    <string name="nutrition_text">Nutrition</string>
     <string name="Water">How many glasses of water did you drink today?</string>
     <string name="waterButton">Enter water</string>
     <string name="Calories">How many calories did you take in?</string>
