Updated some strings

--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -34,8 +34,8 @@
     <string name="nutrition_line3">Calendrier</string>
     <string name="fitness_page_title">Aptitude</string>
     <string name="fitness_line1">Informations d\'entraînement</string>
-    <string name="fitness_line2">Article 2</string>
-    <string name="fitness_line3">Article 3</string>
+    <string name="fitness_line2">Programmes adaptatifs</string>
+    <string name="fitness_line3">Exercices Divers</string>
     <string name="profileInfoTitle">Information de profil</string>
     <string name="profileInfoText">Put info about your part here</string>
     <string name="fitnessInfoTitle">Info Fitness</string>
