--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="fitnessInfoTitle">Fitness Info</string>
     <string name="fitnessInfoText">Put info about your part here</string>
     <string name="nutritionInfoTitle">Nutrition Info</string>
-    <string name="nutritionInfoText">Put info about your part here</string>
+    <string name="nutritionInfoText">\nUses a calendar to let the user enter water and caloric intake for each day.\n Enter in the water consumption and caloric intake in the boxes provided. \n Press the buttons beside the text boxes to add that to daily water/calorie progress.\n\n Select a day on the calendar to update water/calorie progress for that day.\n\n\n\nVersion: 3.5\nAuthor: Stefan Lucic</string>
     <string name="mainInfoTitle">Main Page Info</string>
     <string name="mainInfoText">\n\nUses a recycler view to cycle through available activities.\n\nClick the views to go to the activity of your choice.\n\nClick the icon in the bottom right corner of the view to see information about the activity and author.\n\nAdd and remove items from the Recycler using the buttons in the view at the bottom of the Recycler View.\n\n\n\nVersion: 2.1\nAuthor: Luka Sitas</string>
     <string name="addItemTitle">Add Item</string>
